--- a/requirements.txt
+++ b/requirements.txt
@@ -1,228 +1,8 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-async-generator==1.10
-attrs==21.4.0
-av==9.2.0
-backcall==0.2.0
-bcrypt==3.2.2
-beautifulsoup4==4.11.1
-bleach==5.0.0
-blinker==1.4
-blis==0.7.8
-breadability==0.1.20
-bs4==0.0.1
-catalogue==2.0.7
-certifi==2019.11.28
-cffi==1.15.0
-chardet==3.0.4
-charset-normalizer==2.0.12
-click==8.1.3
-command-not-found==0.3
-cryptography==37.0.2
-cupshelpers==1.0
-cymem==2.0.6
-Cython==0.29.30
-dbus-python==1.2.16
-debugpy==1.6.0
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-distro==1.4.0
-distro-info===0.23ubuntu1
-dnspython==2.2.1
-docopt==0.6.2
-email-validator==1.2.1
-entrypoints==0.3
-executing==0.8.3
-fastjsonschema==2.15.3
-filelock==3.7.1
-Flask==2.1.2
-Flask-Bcrypt==1.0.1
-flask-googlemaps==0.4.1
-Flask-Login==0.6.1
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.1
-fpdf==1.7.2
-gensim==4.2.0
-gensim-sum-ext==0.1.2
-ghp-import==2.1.0
-greenlet==1.1.2
+flask
+flask-login
+flask-sqlalchemy
+email_validator
+Pillow
+flask-bcrypt
+flask-wtf
 gunicorn==20.1.0
-h11==0.13.0
-html2text==2020.1.16
-htmlmin==0.1.12
-httplib2==0.14.0
-idna==2.8
-imageio==2.19.2
-imageio-ffmpeg==0.4.7
-importlib-metadata==4.11.4
-importlib-resources==5.8.0
-ipparser==0.3.8
-ipykernel==6.15.0
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-jsmin==3.0.1
-jsonschema==4.6.0
-jupyter==1.0.0
-jupyter-client==7.3.4
-jupyter-console==6.4.4
-jupyter-core==4.10.0
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-kazam==1.4.5
-keyring==18.0.1
-langcodes==3.3.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-louis==3.12.0
-lxml==4.9.0
-macaroonbakery==1.3.1
-Markdown==3.3.7
-MarkupSafe==2.1.1
-matplotlib-inline==0.1.3
-mergedeep==1.3.4
-mistune==0.8.4
-mkdocs==1.3.0
-mkdocs-material==5.5.14
-mkdocs-material-extensions==1.0.3
-mkdocs-minify-plugin==0.3.0
-MouseInfo==0.1.3
-mss==6.1.0
-murmurhash==1.0.7
-nbclient==0.6.4
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-netifaces==0.10.4
-networkx==2.8.2
-nltk==3.7
-notebook==6.4.12
-ntlm-auth==1.5.0
-numpy==1.22.4
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.5.64
-outcome==1.1.0
-packaging==21.3
-pandas==1.4.2
-pandocfilters==1.5.0
-parso==0.8.3
-pathy==0.6.1
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==9.1.1
-preshed==3.0.6
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-protobuf==3.6.1
-psutil==5.9.1
-psycopg2-binary==2.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-PyAutoGUI==0.9.53
-pycairo==1.16.2
-pycorenlp==0.3.0
-pycountry==22.3.5
-pycparser==2.21
-pycups==1.9.73
-pydantic==1.8.2
-PyGetWindow==0.0.9
-Pygments==2.12.0
-PyGObject==3.36.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-pymdown-extensions==9.5
-PyMsgBox==1.0.9
-PyNaCl==1.3.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PyPDF2==1.28.2
-PyPDF3==1.0.6
-pyperclip==1.8.2
-PyRect==0.2.0
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PyScreeze==0.1.28
-PySocks==1.7.1
-pytesseract==0.3.9
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-dotenv==0.20.0
-python3-xlib==0.15
-pytweening==1.0.4
-pytz==2022.1
-pyxdg==0.26
-PyYAML==5.3.1
-pyyaml_env_tag==0.1
-pyzmq==23.2.0
-qtconsole==5.3.1
-QtPy==2.1.0
-regex==2022.4.24
-reportlab==3.5.34
-requests==2.27.1
-requests-file==1.5.1
-requests-ntlm==1.1.0
-requests-unixsocket==0.2.0
-scipy==1.8.1
-SecretStorage==2.3.1
-selenium==4.2.0
-Send2Trash==1.8.0
-simplejson==3.16.0
-six==1.14.0
-smart-open==5.2.1
-sniffio==1.2.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-spacy==3.3.1
-spacy-legacy==3.0.9
-spacy-loggers==1.0.2
-SQLAlchemy==1.4.37
-srsly==2.4.3
-stack-data==0.3.0
-sumy==0.10.0
-systemd-python==234
-taser==0.3.3
-terminado==0.15.0
-tesseract==0.1.3
-thinc==8.0.17
-tinycss2==1.1.1
-tk==0.1.0
-tkVideo==0.1
-tkvideoplayer==2.1
-tldextract==3.3.0
-tornado==6.1
-tqdm==4.64.0
-traitlets==5.3.0
-trio==0.20.0
-trio-websocket==0.9.2
-typer==0.4.1
-typing_extensions==4.2.0
-ubuntu-advantage-tools==27.8
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-Unidecode==1.3.4
-urllib3==1.26.9
-wadllib==1.3.3
-wasabi==0.9.1
-watchdog==2.1.9
-wcwidth==0.2.5
-webdriver-manager==3.7.0
-webencodings==0.5.1
-Werkzeug==2.1.2
-widgetsnbextension==3.6.1
-wsproto==1.1.0
-WTForms==3.0.1
-xkit==0.0.0
-XlsxWriter==3.0.3
-zipp==3.8.0
